# django-gis-marker-manager

./: MANIFEST.in  README.rst  setup.cfg
docs/: Documentation.docx
mapapp/: admin.py  forms.py  models.py  urls.py  views.py
mapapp/migrations/: 0001_initial.py  0002_auto_20180925_0953.py  0003_auto_20180925_0957.py
mapapp/static/css/: Final.css
mapapp/static/js/: Final.js  map.js
mapapp/templates/mapapp/: base.html  form.html  getCo.html  home.html  new 1.html  new_marker.html
